SONAR-24082 Fix quality gate status