@@ -55,7 +55,6 @@ import org.sonar.process.MessageException;
 import org.sonar.process.ProcessId;
 import org.sonar.process.Props;
 
-import static java.util.stream.Collectors.toList;
 import static org.apache.commons.lang3.RandomStringUtils.secure;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -175,7 +174,7 @@ public class LogbackHelperTest {
     julLogger.severe("Message1");
 
     // JUL bridge has not been initialized, nothing in logs
-    assertThat(memoryAppender.getLogs().stream().filter(l -> l.getMessage().equals("Message1")).collect(toList())).isEmpty();
+    assertThat(memoryAppender.getLogs().stream().filter(l -> l.getMessage().equals("Message1")).toList()).isEmpty();
 
     // Enabling JUL bridge
     LoggerContextListener propagator = underTest.enableJulChangePropagation(ctx);
@@ -195,7 +194,7 @@ public class LogbackHelperTest {
     assertThat(julLogger.isLoggable(java.util.logging.Level.WARNING)).isTrue();
 
     // We are expecting messages from info to severe
-    assertThat(memoryAppender.getLogs().stream().filter(l -> l.getMessage().equals("Message2")).collect(toList())).hasSize(6);
+    assertThat(memoryAppender.getLogs().stream().filter(l -> l.getMessage().equals("Message2")).toList()).hasSize(6);
     memoryAppender.clear();
 
     ctx.getLogger(logbackRootLoggerName).setLevel(Level.INFO);
@@ -208,7 +207,7 @@ public class LogbackHelperTest {
     julLogger.severe("Message3");
 
     // We are expecting messages from finest to severe in TRACE mode
-    assertThat(memoryAppender.getLogs().stream().filter(l -> l.getMessage().equals("Message3")).collect(toList())).hasSize(3);
+    assertThat(memoryAppender.getLogs().stream().filter(l -> l.getMessage().equals("Message3")).toList()).hasSize(3);
     memoryAppender.clear();
     memoryAppender.stop();
 
@@ -294,8 +293,8 @@ public class LogbackHelperTest {
   @Test
   public void createRollingPolicy_fail_if_unknown_policy() {
     props.set("sonar.log.rollingPolicy", "unknown:foo");
+    LoggerContext ctx = underTest.getRootContext();
     try {
-      LoggerContext ctx = underTest.getRootContext();
       underTest.createRollingPolicy(ctx, props, "sonar");
       fail();
     } catch (MessageException e) {
@@ -531,8 +530,7 @@ public class LogbackHelperTest {
       {Level.WARN},
       {Level.INFO},
       {Level.DEBUG},
-      {Level.TRACE},
-      {Level.ALL}
+      {Level.TRACE}
     };
   }
 
